ellipses wrap, fix static room date, data refresh

--- a/css/styles.css
+++ b/css/styles.css
@@ -247,6 +247,9 @@ i {
 }
 .room-container .reserved-by {
     display: block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 /** TRAFFIC MAP **/
